# MyWebBooks

./: .gitignore  .gitmodules  index.py  main.py  pyproject.toml  requirements.txt  test.py
books/: IR.py  IR.yaml
data/: book_data.json  empty_book_data.json  empty_book_form.json  mongodb.json
html_to_epub/: RR_rss.py
lang/: de.json  en.json  no.json
src/: async_book_download.py  auth.py  book_data.py  books.py  download.py  download_manager.py  login.py  mongodb.py  mongodb_api_1.py  royalroad_dl.py  royalroad_rss.py  sendToKindle.py  user_data.py
src/webpages/: __init__.py  _webpages.py  royalroad.py  webpage_base.py
static/: chapter_list_pagination.js  dark_mode.js  edit_book_script.js  initial.css  login.mjs  package-lock.json  package.json  register.mjs  script-final.js  scripts.js  slim_screen.css  styles.css  styles_dark.css
static/epub/: test.js
templates/: books.html  confirm_email.html  data_form.html  dowanload_success.html  download_config.html  edit_book.html  edit_book_old.html  form_import_export.html  header.html  home.html  new_book.html  royalroad_head.html
templates/forms/: login_form.html  new_book.html  register_form.html  reset_password.html
templates/macros/: render_fields.j2  render_fields_2.j2
