[project]
name = "wp-webbook-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.8.*"
dependencies = [
    # "auth>=1.3.0",
    # "auth0-python>=4.13.0",
    # "authlib>=1.6.6",
    # "bs4>=0.0.2",
    # "ebooklib>=0.20",
    # "email-validator>=2.3.0",
    # "flask>=3.1.2",
    # "flask-htmlmin>=3.0.0",
    # "gunicorn>=24.1.1",
    # "pillow>=12.1.0",
    # "pymongo>=4.16.0",
    # "python-dotenv>=1.2.1",
    # "requests>=2.32.5",
    # "setuptools>=80.10.2",
    # "werkzeug>=3.1.5",
    # "xmltodict>=1.0.2",
    "auth>=0.9.1",
    "auth0-python>=4.13.0",
    "authlib>=1.3.2",
    "bs4>=0.0.2",
    "ebooklib>=0.20",
    "email-validator>=2.3.0",
    "flask>=3.0.3",
    "gunicorn>=23.0.0",
    "pillow>=10.4.0",
    "pymongo>=4.10.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.4",
    "setuptools>=75.3.3",
    "werkzeug>=3.0.6",
    "xmltodict>=0.15.0",
]
